whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami

  template:
    metadata:
      labels:
        app: whoami

    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
          name: web
