whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
