whoami/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`transutrechtbeyond.nl`)
      kind: Rule
      services:
        - name: whoami
          port: 80
